Fix bug with media query shrinking body text with too high specificity

--- a/src/pages/sponsor.module.css
+++ b/src/pages/sponsor.module.css
@@ -65,10 +65,6 @@
     display: none;
   }
 
-  p {
-    font-size: 14px;
-  }
-
   .rowText {
     display: flex;
     flex-direction: column;
